manifests/base/frontend/istio/external-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend-external
  namespace: frontend
spec:
  hosts:
    - "app.ayazumman.xyz"
  gateways:
    - istio-system/app-gateway
  http:
    - route:
        - destination:
            host: frontend.frontend.svc.cluster.local
            port:
              number: 80
