manifests/base/frontend/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend
  namespace: frontend
spec:
  hosts:
    - frontend.frontend.svc.cluster.local
  http:
    - route:
        - destination:
            host: frontend.frontend.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: frontend.frontend.svc.cluster.local
            subset: v2
          weight: 10
